--- a/_posts/2018-08-06-opening.md
+++ b/_posts/2018-08-06-opening.md
@@ -2,6 +2,8 @@
 layout: post
 title: "Kim M. Wheeler Launches Site"
 date: 2018-08-06
+author: Kim M. Wheeler
+tags: launch
 ---
 
 This is my first blog post to my personal github site. 
